data/derived/sp14/progs/unify/prog3526.ml.out
Characters 109-124:
  List.combine (let (one,two) = a in (x::one,y::two))
                                     ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
